methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: value update is not a member of java.awt.Color
  if(getCouleurSol()=Color.green){
     ^